    - Bump Standards-Version to 3.7.3. No further changes required. 
    - Fix Xfce spelling error in the package description.
  * Removed patches
    - debian/patches/10-po_fr.patch (merged upstream)
    - debian/patches/11-po_de.patch (merged upstream)
    - debian/patches/12-po_jp.patch (merged upstream)
    - debian/patches/20-stable_branch_updates_r98.patch (applied upstream)
    - debian/patches/30-connection_info_hide_on_delete_event.patch (merged
      upstream)

 -- Michael Biebl <biebl@debian.org>  Thu, 03 Apr 2008 04:05:54 +0200

network-manager-applet (0.6.5-3) unstable; urgency=low

  * debian/control
    - Use the new "Homepage:" field to specify the upstream URL.
    - Add Recommends: network-manager-openvpn-gnome, network-manager-vpnc-gnome

 -- Michael Biebl <biebl@debian.org>  Fri, 19 Oct 2007 18:23:59 +0200

network-manager-applet (0.6.5-2) unstable; urgency=low

  * debian/patches/30-connection_info_hide_on_delete_event.patch
    - Patch from Ubuntu. Hide connection info dialog on delete-event. 
      (Closes: #406073)

 -- Michael Biebl <biebl@debian.org>  Wed, 19 Sep 2007 22:34:18 +0200

network-manager-applet (0.6.5-1) unstable; urgency=low

  * Initial release after the package split.
  * Imported files from previous network-manager source package
    - debian/nm-applet.sgml
    - debian/network-manager-gnome.manpages
    - debian/network-manager-gnome.README.Debian
    - debian/patches/01-dbus_access_nm_applet.patch
    - debian/patches/10-po_fr.patch
    - debian/patches/11-po_de.patch
  * debian/patches/12-po_jp.patch
    - Fixes for the Japanese translation. (Closes: #430672)
      Patch by Kobayashi Noritada <nori1@dolphin.c.u-tokyo.ac.jp>
  * debian/patches/20-stable_branch_updates_r98.patch
    - Pull updates from the stable branch up until revision 98.
    - Contains various bug fixes and translation updates.
  * Add debian/watch to track new upstream releases.

 -- Michael Biebl <biebl@debian.org>  Mon, 27 Aug 2007 08:03:06 +0200